--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,24 @@
-<fragment android:id="@+id/map"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <fragment android:id="@+id/map"
           android:name="com.google.android.gms.maps.SupportMapFragment"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:map="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          tools:context="porqueno.streetcleanpark.MapsActivity"/>
+          tools:context="porqueno.streetcleanpark.MapsActivity">
+
+
+    </fragment>
+    <ProgressBar android:id="@+id/progress"
+                 android:layout_width="wrap_content"
+                 android:layout_height="match_parent"
+                 android:indeterminate="true"
+                 style="@android:style/Widget.ProgressBar.Large"
+                 android:layout_gravity="center_horizontal"
+                 android:visibility="invisible"/>
+</FrameLayout>
