--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,9 +11,30 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           tools:context="porqueno.streetcleanpark.MapsActivity">
-
-
     </fragment>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="0.7"
+        android:layout_gravity="center_horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/hours_desc"
+            android:id="@+id/hours_text"
+            android:layout_gravity="center_horizontal|top"
+            android:gravity="center_horizontal"/>
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:layout_gravity="center_horizontal|top"
+            android:max="120"
+            android:contextClickable="true"
+            />
+    </LinearLayout>
     <ProgressBar android:id="@+id/progress"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
@@ -21,4 +42,5 @@
                  style="@android:style/Widget.ProgressBar.Large"
                  android:layout_gravity="center_horizontal"
                  android:visibility="invisible"/>
+
 </FrameLayout>
