--- a/app/src/main/res/layout/maps_activity.xml
+++ b/app/src/main/res/layout/maps_activity.xml
@@ -62,7 +62,8 @@
                 android:max="120"
                 android:contextClickable="true"
                 android:background="@color/backgroundOverlay"
-                android:paddingBottom="20dp"/>
+                android:paddingBottom="20dp"
+                />
         </LinearLayout>
         <ProgressBar android:id="@+id/progress"
                      android:layout_width="wrap_content"
@@ -70,7 +71,8 @@
                      android:indeterminate="true"
                      style="@android:style/Widget.ProgressBar.Large"
                      android:layout_gravity="center_horizontal"
-                     android:visibility="invisible"/>
+                     android:visibility="invisible"
+            />
 
     </FrameLayout>
 </layout>
